# bloodhound-cli

./: .bumpversion.cfg  AGENTS.md  README.md  bloodhound-ce-cli  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini
.cursor/rules/: bloodhound-mcp-usage-rule.mdc  configuration-management-rule.mdc  dependencies-management-rules.mdc  error-checks.mdc  error-handling-and-logging-rule.mdc  general-python-development.mdc  project-structure-rule.mdc  python-ai-friendly-coding-practices-rule.mdc  python-architecture.mdc  python-code-formatting.mdc  python-documentation-rule.mdc  python-general-coding-style.mdc  python-general-rules.mdc  python-naming-conventions.mdc  python-testing-with-pytest-rule.mdc
.github/workflows/: bump.yml  release.yml
scripts/: install-specterops-cli.sh  setup-complete.sh  setup-goad-data.sh  setup-testing-with-specterops.sh  test-with-goad-domains.sh
src/bloodhound-cli/: __init__.py  main.py
src/bloodhound_cli/: __init__.py  main.py
src/bloodhound_cli/core/: ce.py  legacy.py  logging_utils.py
test-data/: README.md
test-data/goad/AD/: 20250930020554_computers.json  20250930020554_containers.json  20250930020554_domains.json  20250930020554_gpos.json  20250930020554_groups.json  20250930020554_ous.json  20250930020554_users.json
test-data/goad/TB/: 20250930020650_computers.json  20250930020650_containers.json  20250930020650_domains.json  (+4 more)
tests/: conftest.py
tests/integration/: test_ce_integration.py  test_ce_real_data.py  test_legacy_integration.py
tests/unit/: test_ce_queries.py  test_legacy_queries.py
(+7 files in other folders)
